sjengida/g0/calc_attackers
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:497:8: error: use of undeclared identifier 'rook_o_8'
a_sq = rook_o_8[i] + square; 
       ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:512:9: error: use of undeclared identifier 'rook_o_8'
a_sq += rook_o_8[i]; 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:517:9: error: use of undeclared identifier 'bishop_o_7'
a_sqa = bishop_o_7[ia] + square; 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:537:10: error: use of undeclared identifier 'bishop_o_7'
a_sqa += bishop_o_7[ia]; 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:542:12: error: use of undeclared identifier 'knight_o_6'
if ( board[knight_o_6[ib] + square] == 3 ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:550:9: error: use of undeclared identifier 'rook_o_8'
a_sqb = rook_o_8[ic] + square; 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:565:10: error: use of undeclared identifier 'rook_o_8'
a_sqb += rook_o_8[ic]; 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:570:9: error: use of undeclared identifier 'bishop_o_7'
a_sqc = bishop_o_7[id] + square; 
        ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:590:10: error: use of undeclared identifier 'bishop_o_7'
a_sqc += bishop_o_7[id]; 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/attacks.c:595:12: error: use of undeclared identifier 'knight_o_6'
if ( board[knight_o_6[ie] + square] == 4 ) 
           ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/calc_attackers/src/obj/attacks.o] Error 1
